[package]
name = "taskcluster"
version = "0.1.0"
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rust-crypto = "0.2.36"
base64 = "0.12.0"
failure = "0.1.7"
hawk = "3.1.0"
backoff = "0.1.6"
async-std = "1.1.0"
slugid = "1.0.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
chrono = "0.4.11"
httptest = "0.13.1"
